--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,10 +1,28 @@
 {
   "meta": {
-    "username": "put your username here",
-    "repositoryName": "put your repository name here",
-    "branch": "master"
+    "username": "atfd",
+    "repositoryName": "hubpress.io",
+    "branch": "master",
+    "cname": "https://annie.netlify.com"
   },
   "theme": {
-    "name": "Casper"
+    "name": "casper"
+  },
+  "urls": {
+    "site": "http://https://annie.netlify.com",
+    "hubpress": "https://annie.netlify.com",
+    "theme": "//https://annie.netlify.com/themes/casper",
+    "images": "http://https://annie.netlify.com/images"
+  },
+  "initialisationConfigComponent": {
+    "name": "initialise-configuration",
+    "computed": {},
+    "methods": {},
+    "staticRenderFns": [
+      null,
+      null,
+      null
+    ],
+    "_Ctor": {}
   }
 }
