Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -6,7 +6,7 @@
     "cname": "https://annie.netlify.com"
   },
   "theme": {
-    "name": "ghostium"
+    "name": "the-shell"
   },
   "urls": {
     "site": "http://https://annie.netlify.com",
